--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.networknt</groupId>
     <artifactId>light-4j</artifactId>
-    <version>2.1.1-SNAPSHOT</version>
+    <version>3.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Parent POM</name>
     <description>Light 4J Framework Components</description>
@@ -75,7 +75,7 @@
         <version.junit>4.13.1</version.junit>
         <version.mockito>2.23.0</version.mockito>
         <version.powermock>2.0.2</version.powermock>
-        <version.undertow>2.2.14.Final</version.undertow>
+        <version.quarkus>4.1.8</version.quarkus>
         <version.hamcrest>1.3</version.hamcrest>
         <version.assertj>3.8.0</version.assertj>
         <version.hdrhistogram>2.1.10</version.hdrhistogram>
@@ -477,14 +477,9 @@
                 <version>${version.encoder}</version>
             </dependency>
             <dependency>
-                <groupId>io.undertow</groupId>
-                <artifactId>undertow-core</artifactId>
-                <version>${version.undertow}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.threads</groupId>
-                <artifactId>jboss-threads</artifactId>
-                <version>2.3.2.Final</version>
+                <groupId>io.quarkus.http</groupId>
+                <artifactId>quarkus-http-core</artifactId>
+                <version>${version.quarkus}</version>
             </dependency>
             <dependency>
                 <groupId>org.hdrhistogram</groupId>
